// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Zone Change Detection App Module Migration should add provideZoneChangeDetection to app.module.ts with empty providers array 1`] = `
"import { NgModule, provideZoneChangeDetection } from '@angular/core';
import { BrowserModule } from '@angular/platform-browser';
import { AppComponent } from './app.component';

@NgModule({
  declarations: [
    AppComponent
  ],
  imports: [
    BrowserModule
  ],
  providers: [provideZoneChangeDetection({ eventCoalescing: true })],
  bootstrap: [AppComponent]
})
export class AppModule { }
"
`;

exports[`Zone Change Detection App Module Migration should add provideZoneChangeDetection to app.module.ts with existing providers 1`] = `
"import { provideHttpClient } from '@angular/common/http';
import { NgModule, provideZoneChangeDetection } from '@angular/core';
import { BrowserModule } from '@angular/platform-browser';
import { AppComponent } from './app.component';

@NgModule({
  declarations: [
    AppComponent
  ],
  imports: [
    BrowserModule
  ],
  providers: [
    provideHttpClient(),
    provideZoneChangeDetection({ eventCoalescing: true })
  ],
  bootstrap: [AppComponent]
})
export class AppModule { }
"
`;
